--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.1.1",
         "@vitejs/plugin-vue": "^5.2.1",
@@ -32,6 +33,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
+        "pinia": "^3.0.2",
         "reka-ui": "^2.2.1",
         "shadcn-ui": "^0.9.5",
         "tailwind-merge": "^3.2.0",
